# storm-ops

./: .all-contributorsrc  .editorconfig  .env  .envrc  .eslintignore  .eslintrc.base.json  .eslintrc.json  .gitattributes  .gitignore  .log4brains.yml  .markdownlint-cli2.cjs  .npmrc  .prettierignore  CHANGELOG.md  Cargo.toml  README.md  biome.json  deny.toml  devenv.nix  devenv.yaml  eslint.config.js  eslint.config.mjs  flake.nix  jest.config.ts  lefthook.json  lefthook.yml  lint-staged.config.js  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  project.json  rust-toolchain.toml  rustfmt.toml  skills-lock.json  socket.yaml  storm-workspace.json  storm-workspace.schema.json  storm.config.js  (+4 more)
.agents/skills/bun/: SKILL.md
.agents/skills/nix-best-practices/: SKILL.md
.cargo/: config.toml
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  renovate.json  stale.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  documentation.yml  feature-request.yml
.github/actions/setup/: action.yml
.github/actions/setup-workspace/: action.yaml
.github/workflows/: autofix.yml  ci-reusable.yml  ci.yml  clean-owners.yml  cleanowners.yml  codeql.yml  contributors.yml  cr.yml  dependabot-approve.yml  dependabot-update.yml  git-guardian.yml  gitguardian.yml  greetings.yml  labels.yml  lint-commit.yaml  lock.yml  mega-linter.yml  release.yaml  release.yml  schedule-stale.yml  security-reusable.yml  security.yml  sync-labels.yml  sync-package-json-reusable.yml  syncpack-reusable.yml  syncpack.yml  zizmor.yml
.husky/: commit-msg  post-checkout  post-commit  post-merge  pre-commit  pre-push  prepare-commit-msg
.lefthook/post-checkout/: package-version-warning
.lefthook/post-commit/: hook
.lefthook/post-merge/: package-version-warning
crates/storm-config/: CHANGELOG.md  Cargo.toml  README.md  package.json  project.json
crates/storm-config/src/: builder.rs  config.rs  de.rs  env.rs  errors.rs  format.rs  lib.rs  ser.rs  source.rs  storm_config.rs  types.rs  value.rs  workspace_config.rs
crates/storm-config/src/file/: mod.rs
crates/storm-config/src/file/format/: ini.rs  json.rs  json5.rs  mod.rs  ron.rs  toml.rs  yaml.rs
crates/storm-config/src/file/source/: file.rs  mod.rs  string.rs
crates/storm-config/src/path/: mod.rs  parser.rs
crates/storm-workspace/: CHANGELOG.md  Cargo.toml  README.md  package.json  project.json
crates/storm-workspace/src/: errors.rs  lib.rs  utils.rs
devenv-modules/: README.md  package.json  project.json
devenv-modules/ai/: devenv.nix
devenv-modules/atuin/: devenv.nix
devenv-modules/base/: devenv.nix  devenv.yaml
devenv-modules/bun/: devenv.nix  devenv.yaml
devenv-modules/claude/: devenv.nix
devenv-modules/core/: devenv.nix  devenv.yaml
devenv-modules/cpp/: devenv.nix
devenv-modules/development/: devenv.nix
devenv-modules/k8s/: devenv.nix
devenv-modules/mdbook/: devenv.nix
devenv-modules/minimal/: devenv.nix
devenv-modules/pnpm/: devenv.nix  devenv.yaml
devenv-modules/production/: devenv.nix
devenv-modules/python/: devenv.nix
devenv-modules/rust/: devenv.nix  devenv.yaml
devenv-modules/terraform/: devenv.nix  devenv.yaml
devenv-modules/vhs/: devenv.nix
docs/api-reports/: package.json
infrastructure/: Pulumi.yaml  index.ts  package.json
modules/aws/lambda-rs/: lambda.tf  main.tf  variables.tf
patches/: @humanfs__node@0.11.0.patch  @microsoft__api-extractor@7.40.1.patch  actions-up.patch  cosmiconfig@9.0.0.patch  eslint-plugin-import-x.patch  eslint-plugin-pnpm.patch  eslint-plugin-pnpm@0.1.2.patch  eslint-plugin-pnpm@0.3.0.patch  eslint-plugin-react-native.patch  eslint-plugin-tsdoc.patch  eslint-plugin-tsdoc@0.4.0.patch  fs-extra@11.2.0.patch  semantic-release-plugin-decorators@3.0.1.patch  semantic-release@22.0.5.patch  semantic-release@22.0.7.patch  tsup.patch  tsup@7.2.0.patch  tsup@8.0.0.patch  tsup@8.4.0.patch
terraform-modules/: CHANGELOG.md  README.md  package.json  project.json  tsconfig.json
terraform-modules/aws/: package.json
terraform-modules/aws/api-gateway/: api_gateway.tf  locals.tf  main.tf  output.tf  provider.tf  variables.tf
terraform-modules/aws/api-lambda-rs/: api_gateway.tf  lambda.tf  locals.tf  main.tf  output.tf  provider.tf  variables.tf
terraform-modules/aws/eks/: eks-cluster.tf  eks-worker-nodes.tf  outputs.tf  providers.tf  variables.tf  vpc.tf
terraform-modules/aws/karpenter/: karpenter.tf  locals.tf  provider.tf  variables.tf
terraform-modules/aws/lambda-api-gateway/: api_gateway.tf  variables.tf
terraform-modules/aws/lambda-rs/: lambda.tf  main.tf  output.tf  provider.tf  variables.tf
terraform-modules/aws/sns-topic/: main.tf  output.tf  provider.tf  topic.tf  variables.tf
terraform-modules/cloudflare/: package.json
terraform-modules/cloudflare/r2-bucket/: locals.tf  output.tf  provider.tf  r2-bucket.tf  variables.tf
tools/config/: .gitpod.yml  README.md  package.json  tsup.shared.ts  zizmor.yml
tools/nx/: README.md  package.json  project.json  tsconfig.json
tools/nx/src/: index.ts
tools/nx/src/plugin/: index.ts
tools/scripts/: build-plugins.ts  build.config.ts  package.json  project.json  tsconfig.json  tsup.config.ts
tools/scripts/src/: bootstrap.mjs  build-plugins.ts  build.mjs  clean.mjs  delete-stale-tags.mjs  index.ts  nuke.mjs  release.mjs  type-check.mjs  typecheck.mjs
