## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
## Workspace
## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

[workspace]
resolver = '2'
default-members = ['crates/storm-workspace', 'crates/storm-config']
members = ['crates/storm-workspace', 'crates/storm-config']

[workspace.package]
version = '0.0.1'
description = '⚙️ The Storm-Ops monorepo contains utility applications, tools, and various libraries to create modern and scalable web applications.'
repository = 'https://github.com/storm-software/storm-ops'
edition = '2021'
authors = ['storm-software']
license = 'Apache-2.0'
documentation = 'https://stormsoftware.com/docs'
homepage = 'https://stormsoftware.com'
categories = ['config', 'development-tools']
keywords = ['storm', 'storm-ops', 'storm-software', 'build-tools', 'monorepo']

[workspace.metadata.release]
pre-release-commit-message = 'Release Storm-Ops workspace crates v{{version}}'
shared-version = true
tag-prefix = ''
publish = false

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
missing-const-for-fn = "warn"
use-self = "warn"
option-if-let-else = "warn"
redundant-clone = "warn"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Declare dependencies used across workspace packages requires single version bump.
# ref: https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#inheriting-a-dependency-from-a-workspace
[workspace.dependencies]
# Storm-Ops
storm-config = { path = "./crates/storm-config" }
storm-workspace = { path = "./crates/storm-workspace" }

## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
## COMPILATION PROFILES
## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

[profile.dev]
debug = true
incremental = true

[profile.release]
lto = "thin"
strip = "debuginfo"
codegen-units = 16
panic = "unwind"

[profile.release-with-debug]
inherits = "release"
strip = false
lto = "fat"
debug = true

[profile.debug-fast]
inherits = "release"
strip = "none"
debug = true

[profile.prod]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false

# [profile.release]
# # configuration adapted from oxc
# # https://github.com/Boshen/oxc/blob/ea85ee9f2d64dd284c5b7410f491d81fb879abae/Cargo.toml#L89-L97
# opt-level = 3
# lto = "fat"
# codegen-units = 1
# strip = "symbols"
# debug = false
# panic = "abort"   # Let it crash and force ourselves to write safe Rust.

# [profile.dev.build-override]
# strip = 'debuginfo'
# incremental = false

# [profile.release-dhat]
# inherits = 'release'
# debug = 1
