## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
## Workspace
## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

[workspace]
default-members = ['crates/*']
members         = ['crates/*']
resolver        = '3'

[workspace.package]
authors       = ['storm-software']
categories    = ['config', 'development-tools']
description   = '⚙️ The Storm-Ops monorepo contains utility applications, tools, and various libraries to create modern and scalable web applications.'
documentation = 'https://stormsoftware.com/docs'
edition       = '2024'
homepage      = 'https://stormsoftware.com'
keywords      = ['storm', 'storm-ops', 'storm-software', 'build-tools', 'monorepo']
license       = 'Apache-2.0'
repository    = 'https://github.com/storm-software/storm-ops'
version       = '0.0.1'

[workspace.metadata.release]
pre-release-commit-message = 'Release Storm-Ops workspace crates v{{version}}'
publish                    = false
shared-version             = true
tag-prefix                 = ''

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs                  = "warn"
rust-2018-idioms              = "deny"
unnameable-types              = "warn"
unreachable-pub               = "warn"
unused-must-use               = "deny"

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.clippy]
all                  = { level = "warn", priority = -1 }
missing-const-for-fn = "warn"
option-if-let-else   = "warn"
redundant-clone      = "warn"
use-self             = "warn"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Declare dependencies used across workspace packages requires single version bump.
# ref: https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#inheriting-a-dependency-from-a-workspace
[workspace.dependencies]
# Storm-Ops
storm-config    = { path = "./crates/storm-config" }
storm-workspace = { path = "./crates/storm-workspace" }

## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
## COMPILATION PROFILES
## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

[profile.dev]
debug       = true
incremental = true

[profile.release]
codegen-units = 16
lto           = "thin"
panic         = "unwind"
strip         = "debuginfo"

[profile.release-with-debug]
debug    = true
inherits = "release"
lto      = "fat"
strip    = false

[profile.debug-fast]
debug    = true
inherits = "release"
strip    = "none"

[profile.prod]
codegen-units = 1
incremental   = false
inherits      = "release"
lto           = "fat"

# [profile.release]
# # configuration adapted from oxc
# # https://github.com/Boshen/oxc/blob/ea85ee9f2d64dd284c5b7410f491d81fb879abae/Cargo.toml#L89-L97
# opt-level = 3
# lto = "fat"
# codegen-units = 1
# strip = "symbols"
# debug = false
# panic = "abort"   # Let it crash and force ourselves to write safe Rust.

# [profile.dev.build-override]
# strip = 'debuginfo'
# incremental = false

# [profile.release-dhat]
# inherits = 'release'
# debug = 1
