
[package]
name = 'storm-config'
description = 'A crate containing the configuration structure and utilities used by Storm Software monorepos.'
version = '0.2.4'
publish = true
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
homepage = { workspace = true }
documentation = 'https://docs.rs/storm-config'
readme = './README.md'

[features]
default = ['toml', 'yaml', 'ini', 'ron', 'json5', 'convert-case', 'async']
yaml = ['yaml-rust']
ini = ['rust-ini']
json5 = ['json5_rs', 'serde/derive']
convert-case = ['convert_case']
preserve_order = [
	'indexmap',
	'toml?/preserve_order',
	'serde_json/preserve_order',
	'ron?/indexmap',
]
async = ['async-trait']

[dependencies]
async-trait = { version = '0.1.78', optional = true }
convert_case = { version = '0.6.0', optional = true }
lazy_static = '1.4.0'
nom = '7.1.3'
serde = { version = '1.0.197', features = ['derive'] }
serde_derive = { version = '1.0.197', optional = true }
serde_json = { version = '1.0.114' }
storm-workspace = { path = '../storm-workspace', version = '0.2.2' }
thiserror = { version = '1.0.58' }
json5_rs = { version = '0.4', optional = true, package = 'json5' }
toml = { version = '0.8.12', optional = true }
ron = { version = '0.8.1', optional = true }
rust-ini = { version = '0.21.0', optional = true }
indexmap = { version = '2.2.6', features = ['serde'], optional = true }
pathdiff = '0.2.1'
yaml-rust = { version = '0.4.5', optional = true }
