[package]
authors       = { workspace = true }
categories    = { workspace = true }
description   = 'A crate containing various utilities and tools used by Storm Software to manage monorepos.'
documentation = 'https://docs.rs/storm-workspace'
edition       = { workspace = true }
homepage      = { workspace = true }
keywords      = { workspace = true }
license       = { workspace = true }
name          = 'storm-workspace'
publish       = true
readme        = './README.md'
repository    = { workspace = true }
version       = '0.19.100'

[dependencies]
thiserror = '^2.0.17'
